@@ -101,7 +101,9 @@ if($latlng['lat']!=NULL && $latlng['lng']!=NULL) {
     $values['long'] = $latlng['lng'];
 }
 else {
-	$Result->show("warning", _('Failed to update location lat/lng from Nominatim').".<br>".escape_input($latlng['error']), false);
+	if (!Config::ValueOf('offline_mode')) {
+		$Result->show("warning", _('Failed to update location lat/lng from Nominatim').".<br>".escape_input($latlng['error']), false);
+	}
 }
 
 // update customer
